# multiclass-text-classification

./: .gitignore  Dockerfile  Makefile  README.md  client.py  main.py  pyproject.toml  settings.env
notebooks/: data preprocessing.ipynb
services/: paths.py
services/api/: .dockerignore  .gitignore  Dockerfile  Makefile  app.py  client.py  config.py  pyproject.toml
services/data_preparation/: Makefile  config.py  pipeline.py  pyproject.toml
services/data_preparation/utils/: paths.py  text_cleaner.py
services/model_training/: Dockerfile  Makefile  config.py  pipeline.py  pyproject.toml
services/model_training/utils/: base.py  distilbert_fine_tuning.py  embeddings_extraction.py  model_evaluations.py  paths.py  xgboost_trainer.py
src/: config.py  pyproject.toml
src/data_preprocessing/: pipeline.py  text_cleaner.py
src/model_training/: distilbert_fine_tuning.py  embeddings_extraction.py  model_evaluations.py  xgboost_trainer.py
