[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litserve>=0.2.7",
    "load-dotenv>=0.1.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.8.1",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "uvicorn>=0.34.0",
]
