[project]
name = "data-preparation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets==3.3.2",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pydantic-settings>=2.8.1",
    "scikit-learn==1.6.1",
    "torch==2.6.0",
    "transformers>=4.49.0",
]
